# esp32_opencomputers

./: .gitignore  README.md
esp32_opencomputers/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.old
esp32_opencomputers/filesystem/: eeprom.lbl  eeprom.lua  filesys.lua  machine.lua
esp32_opencomputers/filesystem/system/: init.lua
esp32_opencomputers/main/: CMakeLists.txt  canvas.c  canvas.h  config.h  filesystem.c  filesystem.h  font.c  font.h  funcs.c  funcs.h  functions.c  functions.h  hal.c  hal.h  lua_binder.h  lua_binds.c  lua_binds.h  main.c  main.h  sound.c  sound.h
esp32_opencomputers/other/: fontConvert.py
esp32_opencomputers/other/defaultStorage/system/: init.lua
esp32_opencomputers/rom/: eeprom.lbl  eeprom.lua  funcs.lua  machine.lua  tblsave.lua
esp32_opencomputers/rom/noteblock/: 0.raw  1.raw  10.raw  11.raw  12.raw  13.raw  14.raw  15.raw  2.raw  3.raw  4.raw  5.raw  6.raw  7.raw  8.raw  9.raw
operating_systems/liked/: init.lua
operating_systems/liked/system/core/: bootloader.lua  recovery.lua
operating_systems/liked/system/core/autoruns/: a_component.lua
operating_systems/liked/system/core/boot/: a_functions.lua  b_lua_improvements.lua
operating_systems/liked/system/core/lib/: bit32.lua  cache.lua  clipboard.lua  colors.lua  event.lua  filesystem.lua  graphic.lua  hook.lua  internet.lua  lastinfo.lua  logs.lua  natives.lua  package.lua  parser.lua  paths.lua  programs.lua  registry.lua  serialization.lua  sha256.lua  sides.lua  syntax.lua  system.lua  term.lua  text.lua  thread.lua  time.lua  utils.lua  (+4 more)
(+7 files in other folders)
